--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
     <div id="container">
       <h1>Portfolio Dinâmico GitHub</h1>
       <!-- <i class="bi bi-geo-alt"></i> -->
-      <div>
+    </div>
+    <div class="projects">
+      <a href="./projects.html">Meus Projetos</a>
+      <!-- <button onclick="getGitHubAsync()">Meus projetos</button> -->
     </div>
   </body>
 </html>
